[package]
name = "ludum_dare_54"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.11.3", features = ["wav", "mp3"] }
rand = "0.8.5"
wasm-bindgen = "0.2.87"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
